--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       rel="stylesheet"
     />
   </head>
+  <header>
+    <nav>
+      <a href="blog.html" target="_blank">Blog</a>
+    </nav>
+  </header>
   <body>
     <h1 class="title"><img src="./logo.png" /></h1>
     <div id="show-time">0 seconds</div>
