blog post update

--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
                 A function that doesn’t have a return statement implicitly returns undefined.
                 
                 5) Accessing out-of-bounds array elements:<br>
-                When you access an array element that is out-of-bounds, you’ll get the undefined value. For example:
+                When you access an array element that is out-of-bounds, you’ll get the undefined value.<br> For example:
                 
                 const colors = ['red', 'green', 'blue'];
                 console.log(colors[3]); // undefined
